--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <link rel="stylesheet" href=""./assets/style.css">
     </header>
     <main>
       <section class="card" id="html-section">
