fixed a typo in the home page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A: commit all files in the working branch</li>
+          <li>git add -A: add all files in the working branch to the next commit</li>
           <li>git commit -m "&lt;message&gt;": update the Git repository from the working directory</li>
         </ul>
       </section>
